# divergence-decoding-inference-time-unlearning

./: README.md
Benchmarks/: .gitignore  SAVES_LAYOUT.md  pyproject.toml  tofu_config.yaml
Benchmarks/configs/eval/: tofu.yaml
Benchmarks/configs/experiment/eval/tofu/: default.yaml
Benchmarks/configs/experiment/unlearn/tofu/: default.yaml  idk.yaml
Benchmarks/configs/model/: OLMo-2-0425-1B-Instruct.yaml  Qwen3-1.7B-Instruct.yaml  Qwen3-1.7B.yaml  gemma-3-1b-it.yaml
Benchmarks/configs/trainer/: finetune.yaml
Benchmarks/results/: tofu_crosstok_table.tex  tofu_table5.tex
Benchmarks/saves/eval/tofu/leak_at_k/: rebel_cache.json
Benchmarks/saves/eval/tofu_linear/alpha-1.5-3.2-1B/: TOFU_SUMMARY.json
Benchmarks/scripts/analysis/: analyze_distill_scalsust.py  bootstrap_tofu.py  ke_gradient_depth.py  ke_plot_gradient_depth.py  ke_utils.py  muse_scores.py  tofu_scores.py
Benchmarks/scripts/distill/: distill_model_muse.py  distill_model_tofu.py  muse_distill_sweep.py  tofu_distill_sweep.py
Benchmarks/scripts/eval/: muse_sweep.sh  tofu_sweep.sh
Benchmarks/scripts/leak_at_k/: tofu_rebel.py
Benchmarks/scripts/pythia/: .env.example  check_crosstok.py  run_sweep.sh  slurm_run.sh
Benchmarks/scripts/pythia/lib/: common.sh  setup.sh  sync.sh
Benchmarks/scripts/pythia/sweeps/muse/: baselines_eval.sh  cross_tok.sh  dd_linear.sh  eco.sh  (+10 more)
Benchmarks/scripts/scaling/: muse_distill_scalsust.py
Benchmarks/scripts/train/: finetune_model_eco.py  finetune_model_guard.py  finetune_model_lunar.py  finetune_model_offset_unlearning.py  finetune_model_uld.py  finetune_model_whp.py  finetune_muse_models.sh  finetune_single_model.py  finetune_verifier.py
Benchmarks/src/REBEL/: CITATION.cff  LICENSE  README.md
Benchmarks/src/REBEL/root/: config.py  main.py
Benchmarks/src/data/: collators.py  pretraining.py  qa.py
Benchmarks/src/evals/metrics/: utils.py
Benchmarks/src/model/: __init__.py  dd.py  eco.py  guard.py  uld.py  whp.py
Benchmarks/src/trainer/: __init__.py
Benchmarks/src/trainer/unlearn/: rmu.py
(+674 files in other folders)
