[project]
name = "divergence-decoding-benchmarks"
version = "1.0.0"
description = "MUSE + TOFU benchmarks for Divergence Decoding: inference-time unlearning by logit steering between a target model and small retain/forget auxiliaries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

# Built on the OpenUnlearning framework (Dorna et al., 2025). Versions below are
# the canonical set the paper's results were produced with. The exact torch /
# CUDA build is resolved per-machine at install time (see scripts/pythia/).
dependencies = [
    # transformers 4.57.x is required to load the cross-tokenizer auxiliaries
    # (OLMo-2, gemma-3, Qwen3). It also refuses to load legacy .bin checkpoints
    # (Sheared-LLaMA, muse-bench) unless torch>=2.6 (CVE-2025-32434), so torch is
    # pinned to 2.6.0 with a matching prebuilt flash-attn wheel (see scripts/pythia).
    "huggingface-hub==0.36.0",
    "transformers==4.57.6",
    "tokenizers==0.22.2",
    "numpy==2.2.3",
    "hydra-core==1.3",
    "hydra_colorlog==1.2.0",
    "torch==2.6.0",
    "datasets==3.0.1",
    # transformers 4.57.6's Trainer needs a modern accelerate (keep_torch_compile
    # arg, added in 1.3); deepspeed bumped to match. Resolved on-machine, then
    # frozen to exact versions in requirements-pythia.txt.
    "accelerate>=1.8,<2",
    "deepspeed>=0.16,<0.18",
    "bitsandbytes>=0.44.1",
    "peft==0.18.1",
    "sentence-transformers==3.2.1",
    "rouge-score==0.1.2",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "tensorboard==2.18.0",
    "tabulate==0.9.0",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
# Standard-benchmark utility metrics (MMLU, etc.) used by some eval configs.
lm-eval = ["lm-eval==0.4.8"]
dev = ["pre-commit==4.0.1", "ruff==0.6.9"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
